--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>Hazel Orlendo</title>
   <base href="/">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
-  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="assets/css/main.css" />
 </head>
